--- a/SR_Practice_CH2.ipynb
+++ b/SR_Practice_CH2.ipynb
@@ -155,6 +155,71 @@
    "source": [
     "## Medium"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2M1. Recall the globe tossing model from the chapter. "
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "Compute and plot the grid approximate posterior distribution for each of the following sets of observations. In each case, assume a uniform prior for p.\n",
+    "\n",
+    "(1) W, W, W\n",
+    "(2) W, W, W, L\n",
+    "(3) L, W, W, L, W, W, W"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2M2. Now assume a prior for p that is equal to zero when p < 0.5 and is a positive constant when\n",
+    "p ≥ 0.5. Again compute and plot the grid approximate posterior distribution for each of the sets of\n",
+    "observations in the problem just above.\n",
+    "\n",
+    "2M3. Suppose there are two globes, one for Earth and one for Mars. The Earth globe is 70% covered\n",
+    "in water. The Mars globe is 100% land. Further suppose that one of these globes—you don’t know\n",
+    "which—was tossed in the air and produced a “land” observation. Assume that each globe was equally\n",
+    "likely to be tossed. Show that the posterior probability that the globe was the Earth, conditional on\n",
+    "seeing “land” (Pr(Earth|land)), is 0.23.\n",
+    "\n",
+    "2M4. Suppose you have a deck with only three cards. Each card has two sides, and each side is either\n",
+    "black or white. One card has two black sides. The second card has one black and one white side. The\n",
+    "third card has two white sides. Now suppose all three cards are placed in a bag and shuffled. Someone\n",
+    "reaches into the bag and pulls out a card and places it flat on a table. A black side is shown facing up,\n",
+    "but you don’t know the color of the side facing down. Show that the probability that the other side is\n",
+    "also black is 2/3. Use the counting method (Section 2 of the chapter) to approach this problem. This\n",
+    "means counting up the ways that each card could produce the observed data (a black side facing up\n",
+    "on the table).\n",
+    "\n",
+    "2M5. Now suppose there are four cards: B/B, B/W, W/W, and another B/B. Again suppose a card is\n",
+    "drawn from the bag and a black side appears face up. Again calculate the probability that the other\n",
+    "side is black.\n",
+    "\n",
+    "2M6. Imagine that black ink is heavy, and so cards with black sides are heavier than cards with white\n",
+    "sides. As a result, it’s less likely that a card with black sides is pulled from the bag. So again assume\n",
+    "there are three cards: B/B, B/W, and W/W. After experimenting a number of times, you conclude that\n",
+    "for every way to pull the B/B card from the bag, there are 2 ways to pull the B/W card and 3 ways to\n",
+    "pull the W/W card. Again suppose that a card is pulled and a black side appears face up. Show that\n",
+    "the probability the other side is black is now 0.5. Use the counting method, as before.\n",
+    "\n",
+    "2M7. Assume again the original card problem, with a single card showing a black side face up. Before\n",
+    "looking at the other side, we draw another card from the bag and lay it face up on the table. The face\n",
+    "that is shown on the new card is white. Show that the probability that the first card, the one showing\n",
+    "a black side, has black on its other side is now 0.75. Use the counting method, if you can. Hint: Treat\n",
+    "this like the sequence of globe tosses, counting all the ways to see each observation, for each possible\n",
+    "first card."
+   ]
   }
  ],
  "metadata": {
